recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:15: error: not found: value spirale
  spirale(steps-1,90,length+increment,increment)
  ^