recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  avance(steps)
  gauche(angle)
  avance(length)
  gauche(angle)
  avance(length)
  gauche(angle)
  avance(length)
  gauche(angle)
  avance(length)
  
  if (steps==0){
    return
  }
  spirale(steps-1,90,length+increment,increment)
}